# cs216-simplezip

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
app/: main.cpp
compress/: algo_deflate.hpp  algo_store.hpp  compressor.hpp  cps_deflate.cpp  cps_deflate.hpp  cps_store.hpp  deflate.cpp  deflate_huffman.cpp  gt_deflate.cpp  lz77_dictionary.cpp
crc/: crc32.cpp  crc32.hpp
include/sz/: common.hpp  compressor.hpp  file_entry.hpp  fs.hpp  log.hpp  sz.hpp  types.hpp  zipper.hpp
tests/: bitflow_test.cpp  bitstream_test.cpp  deflate_test.cpp
util/: bit_util.cpp  bit_util.hpp  byte_util.hpp  fs.hpp  gt_reversebits.cpp  progress_bar.hpp
wrapper/: constants.hpp  file_entry.cpp  version.hpp  zipper.cpp
